--- a/.github/workflows/FTP-Deployment.yml
+++ b/.github/workflows/FTP-Deployment.yml
@@ -13,9 +13,9 @@ jobs:
     
     steps:
     - name: 🚚 PHP Install
-      uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+      uses: shivammathur/setup-php@v2
       with:
-        php-version: '8.0'
+        php-version: "8.1"
     
     - name: 🚚 Get latest code
       uses: actions/checkout@v3
