--- a/.github/workflows/HOST-Deployment.yml
+++ b/.github/workflows/HOST-Deployment.yml
@@ -23,36 +23,15 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: "ftp.mapanfood.com"
-        username: "_api@api.mapangroup.com"
-        password: "adminMapan58@"
+        server: "${{ secrets.FTP_MAPANFOOD_HOST }}"
+        username: "${{ secrets.FTP_MAPANFOOD_USER }}"
+        password: "${{ secrets.FTP_MAPANFOOD_PASS }}"
         port: "21"
         protocol: "ftp"
-        server-dir: "/"
+        server-dir: "${{ secrets.FTP_MAPANFOOD_DIRS }}"
       
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
-      
-    - name: Prepare .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-      env: 
-        DB_CONNECTION: "mysql"
-        DB_HOST: "147.139.176.119"
-        DB_DATABASE: "20230607_mapan_group"
-        DB_USERNAME: "win_root"
-        DB_PASSWORD: "adminMapan58@"
     
     - name: Install composer dependencies
       run: composer install --optimize-autoloader --no-dev
-      
-    - name: Laravel Preparation
-      run: |
-        php artisan config:cache
-        php artisan event:cache
-        php artisan route:cache
-        php artisan view:cache
-        
-    - name: Generate key
-      run: |
-        php artisan key:generate
-        php artisan passport:install
