--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
         "haruncpi/laravel-id-generator": "^1.1",
+        "intervention/image": "^2.7",
         "laravel/framework": "^10.8",
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.2",
